--- a/index.html
+++ b/index.html
@@ -6,13 +6,66 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Spotify</title>
 </head>
 <body>
 <main>
-    <div class="side-bar"></div>
+    <div class="side-bar txt-grey">
+            <div class="top-side-bar">
+                <img class="logo margin-lft-25" src="./img/logo.svg" alt="logo Spotify">
+                <ul>
+                    <li>
+                        <div class="menu-buttons txt-white">
+                            <hr>
+                            <img class="margin-lft-23" src="./img/home.svg" alt="home">
+                            <span>Home</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="menu-buttons margin-lft-25">
+                        <img src="./img/search.svg" alt="search">
+                        <span>Cerca</span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="menu-buttons margin-lft-25">
+                            <img src="./img/libreria.svg" alt="libreria">
+                            <span>La tua libreria</span>
+                        </div>
+                    </li>
+                </ul>
+                <div class="margin-lft-25">
+                    <h4 class="txt-white font-size-17 margin-top-20">PLAYLIST</h4>
+                    <ul class="list-playlist">
+                        <li class="font-size-17">
+                        <i class="fa-solid fa-plus add-playlist margin-rght-5"></i>
+                        <span>Crea Playlist</span>
+                        </li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                        <li>Nome Playist</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="margin-lft-25">
+                <div class="profile-download">
+                    <img class="width-icon-dwl margin-rght-10" src="./img/download.svg" alt="download">
+                    <span>Installa app</span>
+                    <hr>
+                    <div class="profile-download">
+                        <img class="user-icon margin-rght-10" src="./img/profile.svg" alt="profile">
+                        <span class="txt-white font-size-17 font-wheight-800">John Doe</span>
+                    </div>
+                </div>
+            </div>
+    </div>
     <div class="content">
         <header></header>
     </div>
