--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             </div>
     </div>
     <div class="content">
-        <header></header>
+        <header>
+            <div class="txt-white btn">EFFETTUA L'UPGRADE</div>
+        </header>
     </div>
 </main>
 <footer></footer>    
