[UPD]top content

--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
         <header>
             <div class="txt-white btn">EFFETTUA L'UPGRADE</div>
         </header>
+        <div class="sfoglia-tutto">
+            <ul>
+                <li>IN EVIDENZA
+                    <hr class="hr-evidenza">
+                </li>
+                <li>PODCAST</li>
+                <li>CLASSIFICHE</li>
+                <li>GENERI E MOOD</li>
+                <li>NUOVE USCITE</li>
+                <li>SCOPRI</li>
+            </ul>
+        </div>
+        <div class="recently-played"></div>
+        <div class="creato-da-jd"></div>
+        <div class="artisti-popolari"></div>
     </div>
 </main>
 <footer></footer>    
