[UPD] strutturra layout card

--- a/index.html
+++ b/index.html
@@ -82,7 +82,33 @@
                 <li>SCOPRI</li>
             </ul>
         </div>
-        <div class="recently-played"></div>
+        <div class="recently-played">
+            <div class="top-card"></div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+        </div>
         <div class="creato-da-jd"></div>
         <div class="artisti-popolari"></div>
     </div>
