[UPD]stuttura creato da John Dee

--- a/index.html
+++ b/index.html
@@ -109,7 +109,17 @@
                 <div class="card-tlt-song"></div>
             </div>
         </div>
-        <div class="creato-da-jd"></div>
+        <div class="creato-da-jd">
+            <div class="top-card"></div>
+            <div class="card-50">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+            <div class="card-50">
+                <div class="card-img"></div>
+                <div class="card-tlt-song"></div>
+            </div>
+        </div>
         <div class="artisti-popolari"></div>
     </div>
 </main>
