--- a/index.html
+++ b/index.html
@@ -82,46 +82,59 @@
                 <li>SCOPRI</li>
             </ul>
         </div>
-        <div class="recently-played">
-            <div class="top-card"></div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
+        <div class="container">
+            <div class="recently-played">
+                <div class="top-card"></div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
             </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
+            <div class="creato-da-jd">
+                <div class="top-card"></div>
+                <div class="card-50">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card-50">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                    </div>
             </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
+            <div class="artisti-popolari">
+                <div class="top-card"></div>
+                <div class="card-50">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
+                <div class="card-50">
+                    <div class="card-img"></div>
+                    <div class="card-tlt-song"></div>
+                </div>
             </div>
         </div>
-        <div class="creato-da-jd">
-            <div class="top-card"></div>
-            <div class="card-50">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
-            </div>
-            <div class="card-50">
-                <div class="card-img"></div>
-                <div class="card-tlt-song"></div>
-            </div>
-        </div>
-        <div class="artisti-popolari"></div>
     </div>
+    
 </main>
 <footer></footer>    
 </body>
