--- a/index.html
+++ b/index.html
@@ -84,52 +84,107 @@
         </div>
         <div class="container">
             <div class="recently-played">
-                <div class="top-card"></div>
-                <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                <div class="top-card">
+                    <h2>Recently played</h2>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/metal_lifting.jpg" alt="heavy metal">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Heavy Metal</h4>
+                        <p>Subtitle</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/stranger.jpeg" alt="Stranger Things">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Stranger Things, Vol. 1 
+                            &#40;a Netflix Original Series Soundtrack&#41;</h4>
+                        <p>Kyle Dixon & Michael Stain</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/aquietplace.jpeg" alt="a quiet place">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>A quet place</h4>
+                        <p>Subtitle</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/split.jpeg" alt="split">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Split</h4>
+                        <p>Subtitle</p>
+                    </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/cure.jpeg" alt="cure">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>A cure for wellness</h4>
+                        <p>Subtitle</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/sinister.jpeg" alt="sinister">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Sinister</h4>
+                        <p>Subtitle</p>
+                    </div>
                 </div>
             </div>
             <div class="creato-da-jd">
-                <div class="top-card"></div>
-                <div class="card-50">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                <div class="top-card">
+                    <h2>Creato da John Doe</h2>
+                    <p>più ascolti più accurati saranno i suggerimenti</p>
                 </div>
                 <div class="card-50">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/radar.jpeg" alt="radar">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Release Radar</h4>
+                    </div>
+                </div>
+                <div class="card-50">
+                    <div class="card-img">
+                        <img src="./img/mixdaily.jpeg" alt="mix daily">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Daily Mix 1</h4>
+                    </div>
                     </div>
             </div>
             <div class="artisti-popolari">
-                <div class="top-card"></div>
-                <div class="card-50">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                <div class="top-card">
+                    <h2>Artisti pi&ugrave; popolari</h2>
+                    <p>più ascolti più accurati saranno i suggerimenti</p>    
                 </div>
                 <div class="card-50">
-                    <div class="card-img"></div>
-                    <div class="card-tlt-song"></div>
+                    <div class="card-img">
+                        <img src="./img/youg.jpeg" alt="lana">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Lana del Rey</h4>
+                    </div>
+                </div>
+                <div class="card-50">
+                    <div class="card-img">
+                        <img src="./img/einaudi.jpeg" alt="einaudi">
+                    </div>
+                    <div class="card-tlt-song">
+                        <h4>Ludovico Einaudi</h4>
+                    </div>
                 </div>
             </div>
         </div>
