[UPD]prima colonna footer

--- a/index.html
+++ b/index.html
@@ -191,6 +191,28 @@
     </div>
     
 </main>
-<footer></footer>    
+<footer>
+    <div class="brano">
+        <div class="listen-to">
+            <img src="./img/sinister.jpeg" alt="sinister-small">
+        </div>
+        <div class="tlt-listen-to">
+            <h4>Sinister</h4>
+            <p>Brano Nome</p>
+        </div>
+        <div class="listen-to-icons">
+            <ul>
+                <li>
+                    <i class="fa-regular fa-heart"></i>
+                </li>
+                <li>
+                    <i class="fa-regular fa-folder"></i>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="play"></div>
+    <div class="volume"></div>
+</footer>    
 </body>
 </html>
