--- a/index.html
+++ b/index.html
@@ -211,8 +211,54 @@
             </ul>
         </div>
     </div>
-    <div class="play"></div>
-    <div class="volume"></div>
+    <div class="play">
+        <div class="commands-play">
+            <div class="play-icons">
+                <i class="fa-solid fa-shuffle"></i>
+            </div>
+            <div class="play-icons">
+                <i class="fa-solid fa-backward-step"></i>
+            </div>
+            <div class="play-icons">
+                <i class="fa-solid fa-play border-play"></i>
+            </div>
+            <div class="play-icons">
+                <i class="fa-solid fa-forward-step"></i>
+            </div class="play-icons">
+            <div class="play-icons">
+                <i class="fa-solid fa-arrow-rotate-right"></i>
+            </div>
+        </div>
+        <div class="minute">
+            <div class="time">
+                <p>0:25</p>
+            </div>
+            <div class="barra-time">
+                <div class="bg-barra">
+                    <div class="sm-barra"></div>
+                </div>
+            </div>
+            <div class="time-end">
+                <p>4:25</p>
+            </div>
+        </div>
+    </div>
+    <div class="volume">
+        <div class="list-icon">
+            <i class="fa-solid fa-list"></i>
+        </div>
+        <div class="connect-dispositivi">
+            <i class="fa-solid fa-display"></i>
+        </div>
+        <div class="icon-volume">
+            <i class="fa-solid fa-volume-high"></i>
+        </div>
+        <div class="barra-volume">
+            <div class="bg-barra-vol">
+                <div class="sm-barra-vol"></div>
+            </div>    
+        </div>
+    </div>
 </footer>    
 </body>
 </html>
