[UPD]breakpoints prima del tablet

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Spotify</title>
 </head>
 <body>
@@ -87,59 +87,61 @@
                 <div class="top-card">
                     <h2>Recently played</h2>
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/metal_lifting.jpg" alt="heavy metal">
+                <div class="cards">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/metal_lifting.jpg" alt="heavy metal">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Heavy Metal</h4>
+                            <p>Subtitle</p>
+                        </div>
                     </div>
-                    <div class="card-tlt-song">
-                        <h4>Heavy Metal</h4>
-                        <p>Subtitle</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/stranger.jpeg" alt="Stranger Things">
-                    </div>
-                    <div class="card-tlt-song">
-                        <h4>Stranger Things, Vol. 1 
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/stranger.jpeg" alt="Stranger Things">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Stranger Things, Vol. 1 
                             &#40;a Netflix Original Series Soundtrack&#41;</h4>
-                        <p>Kyle Dixon & Michael Stain</p>
+                            <p>Kyle Dixon & Michael Stain</p>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/aquietplace.jpeg" alt="a quiet place">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/aquietplace.jpeg" alt="a quiet place">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>A quet place</h4>
+                            <p>Subtitle</p>
+                        </div>
                     </div>
-                    <div class="card-tlt-song">
-                        <h4>A quet place</h4>
-                        <p>Subtitle</p>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/split.jpeg" alt="split">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Split</h4>
+                            <p>Subtitle</p>
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/split.jpeg" alt="split">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/cure.jpeg" alt="cure">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>A cure for wellness</h4>
+                            <p>Subtitle</p>
+                        </div>
                     </div>
-                    <div class="card-tlt-song">
-                        <h4>Split</h4>
-                        <p>Subtitle</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/cure.jpeg" alt="cure">
-                    </div>
-                    <div class="card-tlt-song">
-                        <h4>A cure for wellness</h4>
-                        <p>Subtitle</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="./img/sinister.jpeg" alt="sinister">
-                    </div>
-                    <div class="card-tlt-song">
-                        <h4>Sinister</h4>
-                        <p>Subtitle</p>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/sinister.jpeg" alt="sinister">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Sinister</h4>
+                            <p>Subtitle</p>
+                        </div>
                     </div>
                 </div>
             </div>
