--- a/index.html
+++ b/index.html
@@ -150,42 +150,46 @@
                     <h2>Creato da John Doe</h2>
                     <p>più ascolti più accurati saranno i suggerimenti</p>
                 </div>
-                <div class="card-50">
-                    <div class="card-img">
-                        <img src="./img/radar.jpeg" alt="radar">
+                <div class="cards-50">
+                    <div class="card-50">
+                        <div class="card-img">
+                            <img src="./img/radar.jpeg" alt="radar">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Release Radar</h4>
+                        </div>
                     </div>
-                    <div class="card-tlt-song">
-                        <h4>Release Radar</h4>
+                    <div class="card-50">
+                        <div class="card-img">
+                            <img src="./img/mixdaily.jpeg" alt="mix daily">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Daily Mix 1</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="card-50">
-                    <div class="card-img">
-                        <img src="./img/mixdaily.jpeg" alt="mix daily">
-                    </div>
-                    <div class="card-tlt-song">
-                        <h4>Daily Mix 1</h4>
-                    </div>
-                    </div>
             </div>
             <div class="artisti-popolari">
                 <div class="top-card">
                     <h2>Artisti pi&ugrave; popolari</h2>
                     <p>più ascolti più accurati saranno i suggerimenti</p>    
                 </div>
-                <div class="card-50">
-                    <div class="card-img">
-                        <img src="./img/youg.jpeg" alt="lana">
+                <div class="cards-50">
+                    <div class="card-50">
+                        <div class="card-img">
+                            <img src="./img/youg.jpeg" alt="lana">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Lana del Rey</h4>
+                        </div>
                     </div>
-                    <div class="card-tlt-song">
-                        <h4>Lana del Rey</h4>
-                    </div>
-                </div>
-                <div class="card-50">
-                    <div class="card-img">
-                        <img src="./img/einaudi.jpeg" alt="einaudi">
-                    </div>
-                    <div class="card-tlt-song">
-                        <h4>Ludovico Einaudi</h4>
+                    <div class="card-50">
+                        <div class="card-img">
+                            <img src="./img/einaudi.jpeg" alt="einaudi">
+                        </div>
+                        <div class="card-tlt-song">
+                            <h4>Ludovico Einaudi</h4>
+                        </div>
                     </div>
                 </div>
             </div>
