--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="side-bar txt-grey">
             <div class="top-side-bar">
                 <img class="logo margin-lft-25" src="./img/logo.svg" alt="logo Spotify">
+                <img class="logo-none" src="./img/logo-small.svg" alt="logo small">
                 <ul>
                     <li>
                         <div class="menu-buttons txt-white">
@@ -37,7 +38,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="margin-lft-25">
+                <div class="margin-lft-25 playlists">
                     <h4 class="txt-white font-size-17 margin-top-20">PLAYLIST</h4>
                     <ul class="list-playlist">
                         <li class="font-size-17">
@@ -59,7 +60,7 @@
                     <img class="width-icon-dwl margin-rght-10" src="./img/download.svg" alt="download">
                     <span>Installa app</span>
                     <hr>
-                    <div class="profile-download">
+                    <div class="profile-download pad-user">
                         <img class="user-icon margin-rght-10" src="./img/profile.svg" alt="profile">
                         <span class="txt-white font-size-17 font-wheight-800">John Doe</span>
                     </div>
